fixed scrollbar

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -410,7 +410,9 @@ html.smil #fancybox-loading div {
 
     &::-webkit-scrollbar {
         background: transparent;
-        width: 10px;
+        //width: 10px;
+
+        width: 0;
     }
 
     &::-webkit-scrollbar-thumb {
@@ -430,7 +432,7 @@ html.smil #fancybox-loading div {
 }
 
 .fancybox-overlay_bg_white {
-    background: #fff;
+    //background: #fff;
 
     overflow: auto !important;
     overflow-x: hidden !important;
